# Mass-Shooting-Visualizer

./: .gitignore  Mass_Shooting_Data.db  README.md  main.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: database.py
app/crud/: database.py
app/models/: db_entry.py
app/utils/: transformers.py
data/: 2013-data.json
pipelines/: cleaner.py  loader.py  saver.py  scraper.py
ui/: information.py  multi_year.py  single_year.py
ui/utils/: visualization.py
